# MCQ_Manager

./: .gitignore  README.md
client/: index.html  login.html  module.html
client/css/: floating-labels.css  loader.css
client/js/: ajax.js  authentication.js  client-final.js  client.js  js.cookie.js
client/php/: request.php
server/: CMakeLists.txt
server/src/: Database.cpp  Database.h  HelloHandler.cpp  HelloHandler.h  Server.cpp  Server.h  main.cpp
server/src/Qt/: FileDownloader.h  ImageDownloader.h  ImageGetter.h  QtTest.cpp  QtTest.h
server/src/headers/: Authorization.h  CORS.h
server/src/model/: Answer.cpp  Answer.h  Group.cpp  Group.h  Question.cpp  Question.h  Student.cpp  Student.h  StudentAnswer.cpp  StudentAnswer.h  Test.cpp  Test.h
server/src/utils/: Utils.cpp  Utils.h  base64.cpp  base64.h  sha1.cpp  sha1.h
